# fraud-detection-deployment

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: .gitkeep
models/: .gitkeep  feature_columns.joblib  fraud_model.joblib  reference_stats.joblib
src/: __init__.py  api.py  config.py  drift.py  features.py  train.py
tests/: test_drift.py
