[project]
name = "fraud-detection-deployment"
version = "0.1.0"
description = "Simple end-to-end fintech fraud detection MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.116.0",
	"joblib>=1.4.2",
	"mlflow>=2.22.0",
	"numpy>=2.3.0",
	"pandas>=2.3.0",
	"pydantic>=2.11.0",
	"scikit-learn>=1.7.0",
	"uvicorn>=0.35.0",
	"xgboost>=3.0.0",
]

[dependency-groups]
dev = [
	"pytest>=8.3.0",
	"ruff>=0.12.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
